[gd_scene load_steps=14 format=3 uid="uid://c51e0fk6gnlts"]

[ext_resource type="Material" uid="uid://d3okkoi7wgit0" path="res://Shader/explosion.tres" id="1_addbu"]
[ext_resource type="Script" path="res://Enemies/imp/enemy_imp_weak.gd" id="2_r5klr"]
[ext_resource type="Texture2D" uid="uid://cq2kqtir3xgpy" path="res://Art/characters/imp/Imp-Sheet-64.png" id="3_q4jng"]
[ext_resource type="PackedScene" uid="uid://cw5tvrgclens4" path="res://Utility/hurtbox.tscn" id="4_lf7ei"]
[ext_resource type="PackedScene" uid="uid://8vjlu2yy3kr5" path="res://Utility/hitbox.tscn" id="5_meuwg"]
[ext_resource type="AudioStream" uid="uid://cdvp26dpcigcc" path="res://Art/characters/imp/imp_hit.wav" id="6_mgams"]
[ext_resource type="AudioStream" uid="uid://vj4w1ag6srxk" path="res://Art/characters/imp/imp_death.wav" id="7_7qqv2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_05kmr"]
atlas = ExtResource("3_q4jng")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_duujx"]
atlas = ExtResource("3_q4jng")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1h265"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05kmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duujx")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_toy4m"]
radius = 11.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eccb"]
size = Vector2(16, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uerua"]
size = Vector2(27, 26.5)

[node name="enemy_imp_weak" type="CharacterBody2D"]
material = ExtResource("1_addbu")
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("2_r5klr")
enemy_name = "imp"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 16
visibility_layer = 16
y_sort_enabled = true
material = ExtResource("1_addbu")
sprite_frames = SubResource("SpriteFrames_1h265")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_toy4m")

[node name="Hurtbox" parent="." instance=ExtResource("4_lf7ei")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_4eccb")

[node name="Hitbox" parent="." instance=ExtResource("5_meuwg")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-1, 0.25)
shape = SubResource("RectangleShape2D_uerua")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mgams")
volume_db = -2.0

[node name="snd_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_7qqv2")
volume_db = -2.0

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
